--- a/ShimazuSite/Статьи/Поиск_Статей/search_for_articles.html
+++ b/ShimazuSite/Статьи/Поиск_Статей/search_for_articles.html
@@ -11,7 +11,8 @@
 		<a class="main" href="#">Главная</a><a class="states" href="#">Статьи</a><a class="ivents" href="#">События</a><a class="aboutus" href="#">О нас</a>
 	</div>
 	<div class="yadiko">
-		<h1>История Японии и известные военачальники</h1>
+		<h1>Выберите тему и нажмите на картинку.</h1>
+		<h2 class="mark">История Японии и известные военачальники</h2>
 		<div class="bodybody">
 			<a href=""><span class="wg">Война Гэмпэй- рождение самураев</span></a><a href=""><span class="chatk">Монгольское нашествие – Минамото против Чингизидов</span></a><a href="#"><span class="imper">Императоры-воины и их защитники. Император против сёгуна.</span></a>
 			<a href="#"><span class="Oda">Ода Нобунага  первый объединитель Японии: в четырёх статьях.</span></a>
