--- a/search_for_articles.html
+++ b/search_for_articles.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Самураи Симадзу</title>
-	<link rel="stylesheet" href="css/style2.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="upbar">
@@ -12,7 +12,7 @@
 	</div>
 	<div class="yadiko">
 		<h1>Выберите тему и нажмите на картинку.</h1>
-		<h2>История Японии и известные военачальники</h2>
+		<h2 class="mark">История Японии и известные военачальники</h2>
 		<div class="bodybody">
 			<a href=""><span class="wg">Война Гэмпэй- рождение самураев</span></a><a href=""><span class="chatk">Монгольское нашествие – Минамото против Чингизидов</span></a><a href="#"><span class="imper">Императоры-воины и их защитники. Император против сёгуна.</span></a>
 			<a href="#"><span class="Oda">Ода Нобунага  первый объединитель Японии: в четырёх статьях.</span></a>
